--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 post==2019.4.13
 public==2019.4.13
+pydub==0.24.1
 pylint==2.5.3
 query-string==2019.4.13
 request==2019.4.13
