--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
     web:
         build: .
+        image: rocketchat-whatsapp-integration
         ports:
             - "5000:5000"
         volumes:
