--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,33 @@
 version: '3'
 services:
-    web:
-        build: .
-        image: rocketchat-whatsapp-integration
-        ports:
-            - "5000:5000"
-        volumes:
-            - .:/app
-            - messages_queue:/store/messages_queue
-            - messages_received_chat_api:/store/messages_received_chat_api
-            - media_upload:/store/media_upload
-        environment:
-            - FLASK_ENV=development
-            - FLASK_APP=app.py
-            - domain_name=w.unimedtv.coop.br
-            - MEDIA_UPLOAD_URL=https://w.unimedtv.coop.br/static/media_upload/
-            - MEDIA_UPLOAD_PATH=/store/media_upload
-        command:
-            flask run --host=0.0.0.0
+  web:
+    image: rocketchat-whatsapp-integration
+    ports:
+      - 5000:5000
+    build: .
+    # networks:
+    #  - traefik-public
+    volumes:
+      - .:/app
+      - messages_queue:/store/messages_queue
+      - messages_received_chat_api:/store/messages_received_chat_api
+      - media_upload:/store/media_upload
+    env_file:
+      - .env
+    command:
+      flask run --host=0.0.0.0
+    # deploy:
+    #   labels:
+    #     - "traefik.enable=true"
+    #     - "traefik.http.routers.wapi.rule=Host(`w.domain.com.br`)"
+    #     - "traefik.http.routers.wapi.entrypoints=websecure"
+    #     - "traefik.http.services.wapi.loadbalancer.server.port=5000"
+    #     - "traefik.http.routers.rocketchat.tls.certresolver=le"
+# networks:
+#   traefik-public:
+#     external: true
 
 volumes:
-    messages_queue: {}
-    messages_received_chat_api: {}
-    media_upload: {}
+  messages_queue: {}
+  messages_received_chat_api: {}
+  media_upload: {}
